@@ -1,3 +1,8 @@
+Tue Feb 18 09:35:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* test/test/psych/test_string.rb: remove unused variables.
+	* test/test/psych/test_yaml.rb: ditto.
+
 Mon Feb 17 21:31:31 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* test/ruby/test_gc.rb: ignore warning messages for running with -w
